2008-01-07 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSSegmentedCell.m: Added a bit more code.

2008-01-07 09:33-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/AppKit/AppKit.h
	* Headers/AppKit/NSSegmentedCell.h
	* Headers/AppKit/NSSegmentedControl.h
	* Source/GNUmakefile
	* Source/NSSegmentedCell.m
	* Source/NSSegmentedControl.m: Added initial implementation of
	NSSegmentedCell/NSSegmentedControl.

2008-01-07 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSTextView.h,
	* Source/NSTextView_actions.m,
	* Source/NSTextView.m: Add MacOSX methods and ivars.
	* Source/externs.m: Add NSTextView notification.

2008-01-05 15:25-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/AppKit/NSDrawer.h: Added new ivars.
	* Source/NSDrawer.m: Addition implementation of NSDrawer.  Corrected
	drag problem.  Added border.

2008-01-04 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTextContainer.m: Replace tabs with spaces.
	* Source/GSHorizontalTypesetter.m
	(-_getProposedRectFor:withLineHeight:) Extract proposed rect
	generation into separate method.
	* Source/GSLayoutManager.m (-_doLayoutToGlyph:,
	_doLayoutToContainer:): Implement based on code from _doLayout.
	* Source/GSLayoutManager.m (-_doLayout): Implement via
	_doLayoutToContainer:. 
	* Source/NSTextView.m (-setHorizontallyResizable:,
	-setVerticallyResizable:): Set the width/height of the text
	container to max size, when resizable.

2008-01-03 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSStringDrawing.h: Include GSVersionMacros.h
	before using these macros.

2008-01-03 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSTextList.h,
	* Headers/AppKit/NSTextTable.h: New files.
	* Headers/AppKit/AppKit.h: Add these.
	* Source/NSTextList.m,
	* Source/NSTextTable.m,
	* Source/NSTextBlock.m,
	* Source/NSTextTableBlock.m: New files
	* Source/GNUmakefile: Add new source file.

2008-01-01  Adam Fedor  <fedor@gnu.org>

	* Version 0.13.1
